@@ -17,7 +17,7 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>3.8.1</version>
+      <version>4.12</version>
       <scope>test</scope>
     </dependency>
 
@@ -84,9 +84,14 @@
     <dependency>
       <groupId>commons-configuration</groupId>
       <artifactId>commons-configuration</artifactId>
-      <version>1.6</version>
+      <version>1.10</version>
     </dependency>
 
+    <dependency>
+      <groupId>commons-jxpath</groupId>
+      <artifactId>commons-jxpath</artifactId>
+      <version>1.3</version>
+    </dependency>
 
 
     <!-- Logging 설정 -->
@@ -120,6 +125,12 @@
       <groupId>org.mariadb.jdbc</groupId>
       <artifactId>mariadb-java-client</artifactId>
       <version>1.1.7</version>
+    </dependency>
+
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>5.1.6</version>
     </dependency>
 
     <!-- MyBatis 설정 -->
@@ -180,11 +191,6 @@
       <artifactId>annotations-java5</artifactId>
       <version>RELEASE</version>
     </dependency>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>RELEASE</version>
-    </dependency>
   </dependencies>
   <build>
     <finalName>support_system</finalName>
@@ -197,6 +203,10 @@
           <port>8080</port>
           <contextReloadable>true</contextReloadable>
           <path>/</path>
+          <systemProperties>
+            <config.file>D:/Work/workspace/intellij/GPTreeSupport/config/gptree_config.xml</config.file>
+            <JAVA_OPTS>-Xms256m -Xmx512m -XX:MaxPermSize=256m</JAVA_OPTS>
+          </systemProperties>
         </configuration>
       </plugin>
     </plugins>
